[tool.poetry]
name = "flex_tk"
version = "0.1.0"
description = ""
authors = ["Eslam <41278977+eslam5464@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
b2sdk = "^2.3.0"
pandas = "^2.2.2"
pydantic = "^2.7.1"
opencv-python = "^4.9.0.80"
google-cloud-storage = "^2.16.0"
pandera = "^0.19.3"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
xlrd = "^2.0.1"
pyxlsb = "^1.0.10"
pillow = "^10.4.0"
pydantic-settings = "^2.3.4"
cryptography = "^42.0.8"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["MyLibrary/lib", ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
