[tool.poetry]
name = "flex_tk"
version = "0.1.0"
description = ""
authors = ["Eslam <41278977+eslam5464@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
b2sdk = "^2.3.0"
pandas = "^2.2.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
opencv-python = "^4.9.0.80"
google-cloud-storage = "^2.16.0"
pandera = "^0.20.4"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
xlrd = "^2.0.1"
pyxlsb = "^1.0.10"
pillow = "11"
pydantic-settings = "^2.3.4"
cryptography = "^44.0.2"
starlette = "^0.41.2"
google-api-python-client = "^2.142.0"
crc32c = "^2.7.post1"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
boto3 = "^1.35.54"
openpyxl = "^3.1.5"
firebase-admin = "^6.7.0"
ultralytics = "^8.3.119"
dill = "^0.4.0"
scrfd = "^0.3.0"
stripe = "^12.2.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.scripts]
flextk = "flex_tk:cli"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["MyLibrary/lib", "MyLibrary/core", "MyLibrary/cli"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
